Bug fix: DCHECK failure when an empty array is given to chrome.gpuBenchmarking.pointerActionSequence

Bug: 749000
Change-Id: Ib1ba0cea9c8f39be6ff3f24ab2e3b05569555b6c
Reviewed-on: https://chromium-review.googlesource.com/586213
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Lan Wei <lanwei@chromium.org>
Commit-Queue: Hajime Hoshi <hajimehoshi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489660}
Former-commit-id: 08d41c200986b122f3c245a9d301e377d76812dc